added loading to Context export, created action call to get all users for admin panel, created signups for admin panel

--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -22,6 +22,7 @@
     background: #084B55;
     border: 1px solid #ffffff;
     color: #E4B337;
+    cursor: pointer;
 }
 .get-started .btn:hover{
    
