--- a/src/components/pages/Home/home.css
+++ b/src/components/pages/Home/home.css
@@ -4,11 +4,12 @@
 
 .container{
     height: 74vh;
+    width: 100%;
 }
 
 .hero-video{
     width: 100%;
-    height: 80%;
+    height: 100%;
 }
 
 .get-started{
