--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+@import url('https://fonts.googleapis.com/css?family=Bruno+Ace+SC');
+@import url('https://fonts.googleapis.com/css?family=Ysabeau');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css?family=Sofia');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.app{
+  font-family: "Sofia", sans-serif;
 }
 
 .App-header {
